Advancing Templating - Aula 49

--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -6,8 +6,10 @@
     </head>
 
     <body>
-        <h1>{{help}}</h1>
+        {{>header}}
+        
         <p>{{message}}</p>
-    </body>
 
+        {{>footer}}
+    </body>
 </html>
