--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -3,12 +3,13 @@
 
     <head>
         <link rel="stylesheet" href="css/styles.css" />
-        <script src='js/app.js'></script>
     </head>
 
     <body>
-        <h1>{{title}}</h1>
-        <p>Created by {{name}}</p>
+        {{!-- <h1>{{title}}</h1> --}}
+        {{>header}}
+        <img src="img/me.png" />
+        {{>footer}}
     </body>
 
 </html>
