--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -7,9 +7,8 @@
 
     <body>
         {{>header}}
-        
-        <p>{{message}}</p>
-
+        <p>{{errorMessage}}</p>
         {{>footer}}
     </body>
+
 </html>
