Styling the application 2 - Aula 52

--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -1,17 +1,17 @@
-/* h1 {
-    color: grey;
-}
-
-img {
-    width: 250px;
-} */
-
 body{
     color: #333333;
     font-family: arial;
     max-width: 650px;
     margin: 0 auto;
     padding: 0 16px;
+    
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main-content{
+    flex-grow: 1;
 }
 
 footer {
@@ -39,3 +39,7 @@ header a{
     margin-right: 16px;
     text-decoration: none;
 }
+
+.portrait {
+    width: 250px;
+} 
