--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -2,13 +2,16 @@
 <html>
 
     <head>
+        <title>About</title>
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="icon" href="/img/weather.png">
     </head>
 
     <body>
-        {{!-- <h1>{{title}}</h1> --}}
-        {{>header}}
-        <img src="img/me.png" />
+        <div class="main-content">
+            {{>header}}
+            <img src="img/me.png" class="portrait" />
+        </div>
         {{>footer}}
     </body>
 
