--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -2,14 +2,16 @@
 <html>
 
     <head>
+        <title>Help</title>
         <link rel="stylesheet" href="/css/styles.css" />
+        <link rel="icon" href="/img/weather.png">
     </head>
 
     <body>
-        {{>header}}
-        
-        <p>{{message}}</p>
-
+        <div class="main-content">
+            {{>header}}
+            <p>{{message}}</p>
+        </div>
         {{>footer}}
     </body>
 </html>
