--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -2,12 +2,18 @@
 <html>
 
     <head>
+        <title>Weather</title>
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="icon" href="/img/weather.png">
         <script src='js/app.js'></script>
     </head>
 
     <body>
-        {{>header}}
+        <div class="main-content">
+            {{>header}}
+            <p>Use this site to get your weather!</p>
+        </div>
+
         {{>footer}}
     </body>
 
