--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -12,6 +12,7 @@
             {{>header}}
             <img src="img/me.png" class="portrait" />
         </div>
+        Teste
         {{>footer}}
     </body>
 
