--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -5,7 +5,7 @@
         <title>Weather</title>
         <link rel="stylesheet" href="css/styles.css" />
         <link rel="icon" href="/img/weather.png">
-        <script src='js/app.js'></script>
+        <script src='/js/app.js'></script>
     </head>
 
     <body>
