--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -12,12 +12,13 @@
             {{>header}}
             <p>Use this site to get your weather!</p>
 
-                <form>
-                    <input placeholder="Location">
-                    <button>Search</button>
-
-                </form>
-
+            <form>
+                <input placeholder="Location">
+                <button>Search</button>
+            </form>
+            
+            <p id="message-1"></p>
+            <p id="message-2"></p>
 
         </div>
 
