--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Diego Serpa. It uses data from mapbox.com and sarksky.net</p>
             <img src="img/me.png" class="portrait" />
         </div>
         {{>footer}}
